--- a/API.yaml
+++ b/API.yaml
@@ -1,10 +1,17 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
-  title: Task Management API
-  version: 1.0.0
-  description: Generiert von ChatGPT
+  title: Swagger Petstore - OpenAPI 3.0
+  description: "REST API for a simple managment of tasks and authentication. Inspired by ChatGPT but redone by myself afterwards"
+  version: 1.1.0
+
 servers:
   - url: http://localhost:3000
+tags:
+  - name: authentication
+    description: Everything about authentication
+  - name: tasks
+    description: Everything about tasks
+
 paths:
   /login:
     post:
@@ -28,7 +35,7 @@ paths:
                 - password
       responses:
         200:
-          description: Successfully logged in
+          description: Logged in successfully
           content:
             application/json:
               schema:
@@ -37,7 +44,7 @@ paths:
                   success:
                     type: string
         400:
-          description: Bad Request (missing/invalid email or password)
+          description: Bad Request - Invalid email or password
           content:
             application/json:
               schema:
@@ -56,7 +63,7 @@ paths:
                     type: string
   /verify:
     get:
-      summary: Verify login status
+      summary: Check login status
       tags: 
       - authentication
       responses:
@@ -85,7 +92,7 @@ paths:
       - authentication
       responses:
         204:
-          description: Successfully logged out
+          description: Logged out successfully
         401:
           description: Not logged in
           content:
@@ -98,9 +105,11 @@ paths:
   /tasks:
     get:
       summary: Get all tasks
+      tags: 
+      - tasks
       responses:
         200:
-          description: Successfully retrieved tasks
+          description: Retrieved tasks successfully
           content:
             application/json:
               schema:
@@ -109,6 +118,8 @@ paths:
                   $ref: '#/components/schemas/Task'
     post:
       summary: Create a new task
+      tags:
+      - tasks
       requestBody:
         required: true
         content:
@@ -122,7 +133,7 @@ paths:
                 - title
       responses:
         201:
-          description: Successfully created task
+          description: Created task successfully
           content:
             application/json:
               schema:
@@ -138,7 +149,9 @@ paths:
                     type: string
   /tasks/{id}:
     get:
-      summary: Get a task by ID
+      summary: Get a task by Id
+      tags:
+      - tasks
       parameters:
         - name: id
           in: path
@@ -147,7 +160,7 @@ paths:
             type: integer
       responses:
         200:
-          description: Successfully retrieved task
+          description: Retrieved task successfully
           content:
             application/json:
               schema:
@@ -162,7 +175,9 @@ paths:
                   error:
                     type: string
     put:
-      summary: Update a task by ID
+      summary: Update a task by Id
+      tags:
+      - tasks
       parameters:
         - name: id
           in: path
@@ -185,7 +200,7 @@ paths:
                 - title
       responses:
         200:
-          description: Successfully updated task
+          description: Updated task successfully
           content:
             application/json:
               schema:
@@ -209,7 +224,9 @@ paths:
                   error:
                     type: string
     delete:
-      summary: Delete a task by ID
+      summary: Delete a task by Id
+      tags:
+      - tasks
       parameters:
         - name: id
           in: path
@@ -218,7 +235,7 @@ paths:
             type: integer
       responses:
         204:
-          description: Successfully deleted task
+          description: Deleted task successfully
         404:
           description: Task not found
           content:
@@ -228,6 +245,7 @@ paths:
                 properties:
                   error:
                     type: string
+                    
 components:
   schemas:
     Task:
