--- a/API.yaml
+++ b/API.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Swagger Petstore - OpenAPI 3.0
+  title: Tasks Manager API
   description: "REST API for a simple managment of tasks and authentication. Inspired by ChatGPT but redone by myself afterwards"
   version: 1.1.0
 
